<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:padding="10dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/top"
           android:orientation="vertical"
           app:layout_constraintTop_toTopOf="parent"
           >
           <TextView
               android:id="@+id/title"
               style="@style/textStyle"
               android:padding="10dp"
               android:gravity="center"
               android:layout_marginHorizontal="25dp"
               android:text="@string/do_you_want_to_delete_this_city_from_the_list" />
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/top"
            tools:layout_editor_absoluteX="26dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                >

                <TextView
                    style="@style/textStyle"
                    android:id="@+id/btn_next1"
                    android:text="@string/no"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/edit_text_background"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/yes"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btn_next"
                    style="@style/textStyle"
                    android:text="@string/yes"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/purple_700"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/edit_text_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>