<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.test.metio.ui.main.moreFragment.FMoreViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:padding="10dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/top"
           android:orientation="vertical"
           app:layout_constraintTop_toTopOf="parent"
           >
           <TextView

               android:id="@+id/title"
               style="@style/textStyle"
               android:padding="10dp"
               android:gravity="start"
               android:layout_marginHorizontal="25dp"
               android:text="@string/search_for_city" />
           <com.google.android.material.textfield.TextInputLayout
               android:layout_marginBottom="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toTopOf="parent"
               app:startIconDrawable="@drawable/add"
               app:startIconTint="@color/white"
               app:boxStrokeWidth="0dp"
               android:id="@+id/layout"
               app:boxStrokeWidthFocused="0dp"
               app:hintEnabled="false"
               android:layout_marginHorizontal="25dp"
               android:gravity="center"
               android:layout_gravity="center_vertical"
               >
               <androidx.appcompat.widget.AppCompatEditText
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:imeOptions="actionDone"
                   android:inputType="textFilter"
                   android:layout_gravity="top"
                   android:maxLines="2"
                   android:textSize="16sp"
                   android:textColor="@color/white"
                   android:textColorHint="@android:color/darker_gray"
                   android:hint="@string/add_city"
                   android:paddingHorizontal="5dp"
                   android:text="@={viewModel.addedCity}"
                   android:paddingVertical="2dp"
                   android:fontFamily="sans-serif-medium"
                   android:id="@+id/searchEditText"
                   android:soundEffectsEnabled="true"
                   android:background="@drawable/edit_text_background"
                   />
           </com.google.android.material.textfield.TextInputLayout>
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/top"
            tools:layout_editor_absoluteX="26dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/non"
                android:onClick="@{(v)-> viewModel.onClick(v)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                >

                <TextView
                    style="@style/textStyle"
                    android:id="@+id/btn_next1"
                    android:text="@string/no"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/edit_text_background"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/oui"
                android:onClick="@{(v)-> viewModel.onClick(v)}"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btn_next"
                    style="@style/textStyle"
                    android:text="Add"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/purple_700"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/edit_text_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/btn_progress"
                    style="@style/btn_progress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>